# azure_consumption

./: README.md  pyproject.toml
src/: silly_test.py
