[tool.poetry]
name = "azure_consumption"
version = "0.1.0"
description = ""
authors = ["cltj <tj@cloudlink.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
azure-mgmt-consumption = "^9.0.0"
azure-identity = "^1.8.0"
azure-mgmt-resource = "^21.0.0"

[tool.poetry.dev-dependencies]
azure-mgmt-consumption = "^9.0.0"
azure-identity = "^1.8.0"
azure-mgmt-resource = "^21.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
